# funcnodes_numpy

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: py_test.yml  py_test_np_matrix.yml
funcnodes_numpy/: __init__.py  _dtypes.py  _types.py
funcnodes_numpy/_core/: __init__.py
src/funcnodes_numpy/: _ndarray.py
test/: test_general.py  test_lib.py  test_nodes.py  test_types.py
tests/: all_nodes_test_base.py  test_all_nodes.py  test_general.py  test_lib.py  test_types.py
