[project]
name = "funcnodes-numpy"
version = "0.2.11"
description = "implementations of numpy for funcnodes"
readme = "README.md"
classifiers = [ "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",]
dependencies = [ "funcnodes", "numpy",]
requires-python = ">=3.11"
[[project.authors]]
name = "Julian Kimmig"
email = "julian.kimmig@gmx.net"

[dependency-groups]
dev = [ "pytest", "pre-commit", "funcnodes-module>=0.2.8",]

[build-system]
requires = [ "setuptools>=42",]
build-backend = "setuptools.build_meta"

[project.license]
text = "AGPL-3.0"

[project.urls]
homepage = "https://github.com/Linkdlab/funcnodes_numpy"
source = "https://github.com/Linkdlab/funcnodes_numpy"
tracker = "https://github.com/Linkdlab/funcnodes_numpy/issues"
download = "https://pypi.org/project/funcnodes-numpy/#files"

[tool.setuptools.package-dir]
"" = "src"

[project.entry-points."funcnodes.module"]
module = "funcnodes_numpy"
shelf = "funcnodes_numpy:NODE_SHELF"

[tool.setuptools.packages.find]
where = [ "src",]
